# python-starter-template

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.circleci/: team-config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/starter_template/: cli.py
tests/: test_build.py  test_sample.py
