[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starter_template"
version = "0.1.0"
description = "A starter template for Python projects."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black" 